
bin_PROGRAMS = postal

postal_SOURCES = main.cpp
postal_SOURCES += AnimThing.cpp
postal_SOURCES += ball.cpp
postal_SOURCES += barrel.cpp
postal_SOURCES += bouy.cpp
postal_SOURCES += character.cpp
postal_SOURCES += chunk.cpp
postal_SOURCES += deathWad.cpp
postal_SOURCES += demon.cpp
postal_SOURCES += dispenser.cpp
postal_SOURCES += doofus.cpp
postal_SOURCES += dude.cpp
postal_SOURCES += explode.cpp
postal_SOURCES += fire.cpp
postal_SOURCES += fireball.cpp
postal_SOURCES += firebomb.cpp
postal_SOURCES += flag.cpp
postal_SOURCES += flagbase.cpp
postal_SOURCES += grenade.cpp
postal_SOURCES += heatseeker.cpp
postal_SOURCES += hood.cpp
postal_SOURCES += item3d.cpp
postal_SOURCES += mine.cpp
postal_SOURCES += napalm.cpp
postal_SOURCES += navnet.cpp
postal_SOURCES += ostrich.cpp
postal_SOURCES += person.cpp
postal_SOURCES += PowerUp.cpp
postal_SOURCES += pylon.cpp
postal_SOURCES += rocket.cpp
postal_SOURCES += sentry.cpp
postal_SOURCES += SndRelay.cpp
postal_SOURCES += SoundThing.cpp
postal_SOURCES += thing.cpp
postal_SOURCES += Thing3d.cpp
postal_SOURCES += trigger.cpp
postal_SOURCES += warp.cpp
postal_SOURCES += weapon.cpp
postal_SOURCES += alphablitforpostal.cpp
postal_SOURCES += Anim3D.cpp
postal_SOURCES += BufQ.cpp
postal_SOURCES += bulletFest.cpp
postal_SOURCES += camera.cpp
postal_SOURCES += crawler.cpp
postal_SOURCES += cutscene.cpp
postal_SOURCES += encrypt.cpp
postal_SOURCES += gameedit.cpp
postal_SOURCES += GameSettings.cpp
postal_SOURCES += grip.cpp
postal_SOURCES += IdBank.cpp
postal_SOURCES += InputSettings.cpp
postal_SOURCES += InputSettingsDlg.cpp
postal_SOURCES += keys.cpp
postal_SOURCES += Log.cpp
postal_SOURCES += logtab.cpp
postal_SOURCES += MemFileFest.cpp
postal_SOURCES += MenuSettings.cpp
postal_SOURCES += MenuTrans.cpp
postal_SOURCES += net.cpp
postal_SOURCES += NetBrowse.cpp
postal_SOURCES += NetClient.cpp
postal_SOURCES += NetDlg.cpp
postal_SOURCES += netmsgr.cpp
postal_SOURCES += NetServer.cpp
postal_SOURCES += organ.cpp
postal_SOURCES += Personatorium.cpp
postal_SOURCES += ProtoBSDIP.cpp
postal_SOURCES += realm.cpp
postal_SOURCES += scene.cpp
postal_SOURCES += score.cpp
postal_SOURCES += settings.cpp
postal_SOURCES += smash.cpp
postal_SOURCES += socket.cpp
postal_SOURCES += StockPile.cpp
postal_SOURCES += TexEdit.cpp
postal_SOURCES += toolbar.cpp
postal_SOURCES += TriggerRegions.cpp
postal_SOURCES += update.cpp
postal_SOURCES += yatime.cpp
postal_SOURCES += aivars.cpp
postal_SOURCES += band.cpp
postal_SOURCES += credits.cpp
postal_SOURCES += game.cpp
postal_SOURCES += input.cpp
postal_SOURCES += localize.cpp
postal_SOURCES += menus.cpp
postal_SOURCES += play.cpp
postal_SOURCES += SampleMaster.cpp
postal_SOURCES += title.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bdebug.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bjoy.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bkey.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bmain.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bmouse.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Btime.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bdisp.cpp
postal_SOURCES += RSPiX/Src/BLUE/unix/Bsound.cpp
postal_SOURCES += RSPiX/Src/GREEN/Hot/hot.cpp
postal_SOURCES += RSPiX/Src/GREEN/Image/Image.cpp
postal_SOURCES += RSPiX/Src/GREEN/Image/Imagecon.cpp
postal_SOURCES += RSPiX/Src/GREEN/Image/ImageFile.cpp
postal_SOURCES += RSPiX/Src/GREEN/InputEvent/InputEvent.cpp
postal_SOURCES += RSPiX/Src/GREEN/Mix/mix.cpp
postal_SOURCES += RSPiX/Src/GREEN/Mix/MixBuf.cpp
postal_SOURCES += RSPiX/Src/GREEN/Image/pal.cpp
postal_SOURCES += RSPiX/Src/GREEN/Image/PalFile.cpp
postal_SOURCES += RSPiX/Src/GREEN/Sample/sample.cpp
postal_SOURCES += RSPiX/Src/GREEN/Snd/snd.cpp
postal_SOURCES += RSPiX/Src/GREEN/SndFx/SndFx.cpp
postal_SOURCES += RSPiX/Src/GREEN/Task/task.cpp
postal_SOURCES += RSPiX/Src/GREEN/3D/pipeline.cpp
postal_SOURCES += RSPiX/Src/GREEN/3D/render.cpp
postal_SOURCES += RSPiX/Src/GREEN/3D/types3d.cpp
postal_SOURCES += RSPiX/Src/GREEN/3D/zbuffer.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/alphablit.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/BLIT.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/BLITINIT.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/BLiTT.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/CFNT.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/Fspr1.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/FSPR8.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/line.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/mono.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/Rotate96.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/RPrint.cpp
postal_SOURCES += RSPiX/Src/GREEN/BLiT/ScaleFlat.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GameLib/ANIMSPRT.cpp
postal_SOURCES += RSPiX/Src/ORANGE/Attribute/attribute.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/btn.cpp
postal_SOURCES += RSPiX/Src/ORANGE/Channel/channel.cpp
postal_SOURCES += RSPiX/Src/ORANGE/color/colormatch.cpp
postal_SOURCES += RSPiX/Src/ORANGE/DirtRect/DirtRect.cpp
postal_SOURCES += RSPiX/Src/ORANGE/color/dithermatch.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/dlg.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/edit.cpp
postal_SOURCES += RSPiX/Src/ORANGE/File/file.cpp
postal_SOURCES += RSPiX/Src/ORANGE/QuickMath/FixedPoint.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/guiItem.cpp
postal_SOURCES += RSPiX/Src/ORANGE/IFF/iff.cpp
postal_SOURCES += RSPiX/Src/ORANGE/ImageTools/lasso.cpp
postal_SOURCES += RSPiX/Src/ORANGE/Laymage/laymage.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/ListBox.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/ListContents.cpp
postal_SOURCES += RSPiX/Src/ORANGE/Meter/meter.cpp
postal_SOURCES += RSPiX/Src/ORANGE/MsgBox/MsgBox.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/MultiBtn.cpp
postal_SOURCES += RSPiX/Src/ORANGE/MultiGrid/MultiGrid.cpp
postal_SOURCES += RSPiX/Src/ORANGE/MultiGrid/MultiGridIndirect.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/ProcessGui.cpp
postal_SOURCES += RSPiX/Src/ORANGE/Debug/profile.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/PushBtn.cpp
postal_SOURCES += RSPiX/Src/ORANGE/QuickMath/QuickMath.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GameLib/Region.cpp
postal_SOURCES += RSPiX/Src/ORANGE/RString/rstring.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/scrollbar.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GameLib/SHAPES.cpp
postal_SOURCES += RSPiX/Src/ORANGE/Parse/SimpleBatch.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GameLib/SPRITE.cpp
postal_SOURCES += RSPiX/Src/ORANGE/str/str.cpp
postal_SOURCES += RSPiX/Src/ORANGE/GUI/txt.cpp
postal_SOURCES += RSPiX/Src/CYAN/Unix/uDialog.cpp
postal_SOURCES += RSPiX/Src/CYAN/Unix/uColors.cpp
postal_SOURCES += RSPiX/Src/CYAN/Unix/uPath.cpp
postal_SOURCES += WishPiX/Menu/menu.cpp
postal_SOURCES += WishPiX/Prefs/prefline.cpp
postal_SOURCES += WishPiX/Prefs/prefs.cpp
postal_SOURCES += WishPiX/ResourceManager/resmgr.cpp
postal_SOURCES += WishPiX/Spry/spry.cpp

postal_SOURCES += RSPiX/Inc/RSPiX.h
postal_CPPFLAGS = -I$(srcdir)/RSPiX/Inc
postal_CPPFLAGS += -I$(srcdir)/RSPiX/Src
postal_CPPFLAGS += -I$(srcdir)/RSPiX/Src/BLUE
postal_CPPFLAGS += -I$(srcdir)/SDL2/include
postal_CPPFLAGS += -fsigned-char -g -DPLATFORM_UNIX -w -DLOCALE=US -DTARGET=POSTAL_2015
postal_LDADD = -lSDL2
